Fixed 'Search Your County' alignment

--- a/static/datastyle.css
+++ b/static/datastyle.css
@@ -47,6 +47,13 @@ h2 {
 	text-shadow: 2px 2px 3px #afe38c;
 }
 
+h2#HelpfulTextAboveSearchInput {
+	color: #2E8B57;
+	text-align: center;
+	font-family: Verdana, Geneva, sans-serif;
+	text-shadow: 2px 2px 3px #afe38c;
+}
+
 #navigationBar_ul{
 	list-style-type: none;
 	margin: 0;
